# harvest-almanac

./: .build.yml  .clang-format  .gitignore  CONTRIBUTING.md  LICENSE  README.md  meson.build  meson_options.txt  meson_post_install.sh
.builds/: alpine.yml  fedora.yml
data/: hal-resources.gresource.xml  harvest-almanac-resources.gresource.xml  ht.sr.git.tristan957.harvest-almanac.appdata.xml.in  ht.sr.git.tristan957.harvest-almanac.gschema.xml  io.partin.tristan.HarvestAlmanac.appdata.xml.in  io.partin.tristan.HarvestAlmanac.desktop.in  io.partin.tristan.HarvestAlmanac.gschema.xml  meson.build
data/ui/: hal-preferences-window.ui  hal-profile.ui  hal-settings-dialog.ui  hal-time-entry.ui  hal-time-tracker.ui  hal-window.ui  style.css
harvest-almanac/: hal-application.c  hal-context.c  hal-context.h  hal-preferences-window.c  hal-preferences-window.h  hal-profile.c  hal-profile.h  hal-time-entry.c  hal-time-tracker.c  hal-time-tracker.h  hal-window.c  hal-window.h  main.c  meson.build
harvest-glib/: LICENSE  config.h  config.h.in  harvest-api-client.c  harvest-api-client.h  harvest-client.c  harvest-common.c  harvest-company.c  harvest-company.h  harvest-creator.c  harvest-creator.h  harvest-error.h  harvest-estimate-item-category.c  harvest-estimate-line-item.c  harvest-estimate.c  harvest-get-company-request.c  harvest-get-company-request.h  harvest-http.h  harvest-invoice-item-category.c  harvest-invoice-line-item.c  harvest-invoice.c  harvest-late-request.c  harvest-late-request.h  harvest-links.c  harvest-pageable.c  harvest-paged.c  harvest-project.c  harvest-request.c  harvest-request.h  harvest-response-metadata.c  harvest-response-metadata.h  harvest-response.c  harvest-response.h  harvest-task-assignment.c  harvest-task.c  harvest-time-entry.c  harvest-time-entry.h  harvest-user-assignment.c  harvest-user-assignment.h  harvest-user.c  (+5 more)
harvest-glib/client/: harvest-client.c
harvest-glib/common/: harvest-common.c  harvest-creator.c
harvest-glib/company/: harvest-company.c
harvest-glib/company/requests/: harvest-get-company-request.c
harvest-glib/estimate/: harvest-estimate-item-category.c  harvest-estimate-line-item.c  harvest-estimate.c
harvest-glib/http/api/: harvest-api-client.c
harvest-glib/http/request/: harvest-pageable.c  harvest-request.c
harvest-glib/http/response/: harvest-links.c  harvest-paged.c  harvest-response-metadata.c  harvest-response.c
harvest-glib/invoice/: harvest-invoice-item-category.c  harvest-invoice-line-item.c  harvest-invoice.c
harvest-glib/project/: harvest-project-task-assignment.c  harvest-project-user-assignment.c  harvest-project.c  harvest-user-assignment.c  meson.build
harvest-glib/task/: harvest-task-assignment.c  harvest-task-assignment.h  harvest-task.c  meson.build
harvest-glib/tests/: init.h  meson.build  user.c
harvest-glib/time-entry/: harvest-time-entry.c
harvest-glib/time-entry/requests/: harvest-late-request.c
harvest-glib/user/: harvest-user-project-assignment.c  harvest-user.c  meson.build
harvest-glib/user/requests/: harvest-users-me-request.c
include/: hal-application.h  hal-preferences-window.h  hal-time-entry.h  hal-window.h
lib/: harvest-api-client.c  harvest-api-client.h  harvest-client.c  harvest-client.h  harvest-common.c  harvest-common.h  harvest-creator.c  harvest-creator.h  harvest-error.h  harvest-estimate-item-category.c  harvest-estimate-item-category.h  harvest-estimate-line-item.c  harvest-estimate-line-item.h  harvest-estimate.c  harvest-estimate.h  harvest-invoice-item-category.c  harvest-invoice-item-category.h  harvest-invoice-line-item.c  harvest-invoice-line-item.h  harvest-invoice.c  harvest-invoice.h  harvest-project.c  harvest-project.h  harvest-task-assignment.c  harvest-task-assignment.h  harvest-task.c  harvest-task.h  harvest-time-entry.c  harvest-time-entry.h  harvest-user-assignment.c  harvest-user-assignment.h  harvest-user.c  harvest-user.h  harvest.h  harvest.h.in  meson.build
lib/client/objects/: harvest-client.c  harvest-client.h
lib/estimate/objects/: harvest-estimate-item-category.h  harvest-estimate-line-item.c  harvest-estimate-line-item.h  harvest-estimate.c  harvest-estimate.h
lib/invoice/objects/: harvest-invoice-item-category.c  harvest-invoice-item-category.h  harvest-invoice-line-item.c  harvest-invoice-line-item.h  harvest-invoice.c  harvest-invoice.h
lib/project/objects/: harvest-project.c  harvest-project.h
lib/shared/: harvest-api-client.c  harvest-api-client.h  harvest-common.c  harvest-common.h  harvest-error.h  harvest-http.h  harvest-pageable.c  harvest-pageable.h
lib/shared/objects/: harvest-creator.h
lib/shared/requests/: harvest-request.c  harvest-request.h
lib/shared/responses/: harvest-links.c  harvest-links.h  harvest-paged.c  harvest-paged.h  harvest-response-metadata.c  harvest-response-metadata.h  harvest-response.c  harvest-response.h
lib/task/objects/: harvest-task-assignment.c  harvest-task-assignment.h  harvest-task.h
lib/timesheet/objects/: harvest-time-entry.c  harvest-time-entry.h
lib/timesheet/requests/: harvest-late-request.c  harvest-late-request.h
lib/user/objects/: harvest-user-assignment.c  harvest-user-assignment.h
po/: meson.build
scripts/: run-glade-with-libhandy.sh
src/: config.h.in  hal-application.c  hal-application.h  hal-profile.c  hal-profile.h  hal-settings-dialog.c  hal-settings-dialog.h  hal-time-entry.c  hal-time-entry.h  hal-time-tracker.c  hal-time-tracker.h  hal-window.c  hal-window.h  main.c  meson.build
subprojects/: gio.wrap  glib.wrap  gtk.wrap  harvest-glib.wrap  json-glib.wrap  libhandy.wrap  libsecret.wrap  libsoup.wrap
